security/rbac.yaml
# 创建ecommerce命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    name: ecommerce
